org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/TransitionUsage_invalid.sysml.xt
//*
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/Occurrences.kerml"}
		File {from ="/library.kernel/Objects.kerml"}
		File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/Transfers.kerml"}
		File {from ="/library.kernel/ControlPerformances.kerml"}
		File {from ="/library.kernel/StatePerformances.kerml"}
		File {from ="/library.kernel/TransitionPerformances.kerml"}
		File {from ="/library.systems/Items.sysml"}
		File {from ="/library.systems/Parts.sysml"}
		File {from ="/library.systems/Ports.sysml"}
		File {from ="/library.systems/Actions.sysml"}
		File {from ="/library.systems/States.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/Transfers.kerml"}
				File {from ="/library.kernel/ControlPerformances.kerml"}
				File {from ="/library.kernel/StatePerformances.kerml"}
				File {from ="/library.kernel/TransitionPerformances.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
				File {from ="/library.systems/Actions.sysml"}
				File {from ="/library.systems/States.sysml"}
			}
		}
	}
END_SETUP 
*/
package TransitionUsage_invalid {
	
	state def S1;
	
	// XPECT errors ---> "Must have an initial transition from entry." at "state def S2 {\n		state S2_1;\n		then S2_1;\n	}"
	state def S2 {
		state S2_1;
		then S2_1;
	}
	
	state def S3 parallel {
		state S3_1;
		// XPECT errors ---> "A parallel state cannot have successions or transitions." at "then S3_2"
		then S3_2;
		state S3_2;
	}
	
	state def S4 {
		entry; then S4_1;
		state S4_1;
		// XPECT errors ---> "Must have an incoming transition." at "state S4_2;"
		state S4_2;
	}
	
	state s1;
	
	// XPECT errors ---> "Must have an initial transition from entry." at "state s2 {\n		state s2_1;\n		then s2_1;\n	}"
	state s2 {
		state s2_1;
		then s2_1;
	}

	state s3 parallel {
		state s3_1;
		// XPECT errors ---> "A parallel state cannot have successions or transitions." at "then s3_2"
		then s3_2;
		state s3_2;
	}
	
	state s4 {
		entry; then s4_1;
		state s4_1;
		// XPECT errors ---> "Must have an incoming transition." at "state s4_2;"
		state s4_2;
	}
	
}
